--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Passport-Spotify Example</title>
+		<title>1q</title>
 	</head>
 	<body>
 		{% if !user %}
