--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,9 @@
 	<p><a href="/login">login</a></p>
 {% else %}
 	<h1>Fuck you {{ user.username }}.</h1>
+	<div class="searchbox">
+		<input type="text" ng-model="query" ng-change="loadsearch()" ng-keyup="loadsearch()" placeholder="Search..." />
+	</div>
 	<iframe src="https://embed.spotify.com/?uri=spotify:track:32lm3769IRfcnrQV11LO4E&theme=white&view=coverart" width="300" height="380" frameborder="0" allowtransparency="true"></iframe>
 {% endif %}
 {% endblock %}
