I made a button. Byeeeee.

--- a/templates/amigoIndex.html
+++ b/templates/amigoIndex.html
@@ -3,5 +3,6 @@
 {% block content %}
 	<h1>I'm the amigo, bitch</h1>
 	<h3>and my daddy is {{ip}}</h3>
-	<input type="text" name="amigo-input">
+	<input id="track-send-input" type="text" name="amigo-input">
+	<button id="track-send-btn" href="/sendTrack">Dispatch the bitches</button> >
 {% endblock %}
