--- a/templates/layout.html
+++ b/templates/layout.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>1q</title>
+		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 	</head>
 	<body>
 		{% if user %}
