--- a/templates/amigoIndex.html
+++ b/templates/amigoIndex.html
@@ -4,7 +4,7 @@
 	<div id="amigo">
 		<h1>I'm the amigo, bitch</h1>
 		<h3>and my daddy is {{ip}}</h3>
-		<form method="post" action="/searchTrack">
+		<form method="post" action="/searchTrack" value="hello">
 			<input id="track-search-input" type="text" name="amigo[search]"/>
 			<input type="submit" value="piss into the wind"/>
 		</form>
