--- a/templates/hostIndex.html
+++ b/templates/hostIndex.html
@@ -3,8 +3,8 @@
 {% block content %}
 	<div id="host">
 		<h1>Fuck you {{ user.username }}.</h1>
-		<a href="http://{{ip}}:6969/join/{{ip}}" target="_blank">8=====D</a>
-		<p id='message'></p>
+		<a href="http://localhost:6969/join/{{ip}}" target="_blank">http://localhost:6969/join/{{ip}}</a>
+                <div class="playlist"></div>
 		<div class="searchbox">
 			<input type="text" ng-model="query" ng-change="loadsearch()" ng-keyup="loadsearch()" placeholder="Search..." />
 		</div>
@@ -13,9 +13,9 @@
 	<script>
 		var socket = io.connect('http://{{ip}}:8080');
     socket.on('newTrack', function(data) {
-      $('#message').html(data.name);
       var trackID = data.uri;
       $('#player').attr("src", "https://embed.spotify.com/?uri=" + trackID + "&theme=white&view=coverart");
+      $(".playlist").append("<p>" + data.name + "</p>").hide().slideDown("slow");
     });
 
 	</script>
