--- a/templates/layout.html
+++ b/templates/layout.html
@@ -2,17 +2,22 @@
 <html>
 	<head>
 		<title>1q</title>
+		<link rel="stylesheet" type="text/css" href="/main.css"/>
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 		<script type="text/javascript" src='https://cdn.socket.io/socket.io-1.4.5.js'></script>
+		<link rel="stylesheet" href="main.css"/>
 	</head>
 	<body>
+		<div class="navbar">
+			<div class="brand-container">
+				<div class="navbar-brand" id="brand">1Q</div>
+				<div class="navbar-brand" id="fun">Fuck you</div>
+			</div>
+
 		{% if user %}
-			<p>
-			<a href="/">Home</a> |
-			<a href="/account">Account</a> |
 			<a href="/logout">Log Out</a>
-			</p>
 		{% endif %}
+		</div>
 		{% block content %}
 	</body>
 </html>
