--- a/templates/amigoIndex.html
+++ b/templates/amigoIndex.html
@@ -2,6 +2,9 @@
 
 {% block content %}
 	<div id="amigo">
+		<div class="info-banner">
+			<h1>Joined queue</h1>
+		</div>
 		<h1>I'm the amigo, bitch</h1>
 		<h3>and my daddy is {{ip}}</h3>
 		<form method="post" action="/searchTrack" value="hello">
