--- a/templates/layout.html
+++ b/templates/layout.html
@@ -18,6 +18,8 @@
 			<a href="/logout">Log Out</a>
 		{% endif %}
 		</div>
-		{% block content %}
+		<div class="main-content">
+			{% block content %}
+		</div>
 	</body>
 </html>
