--- a/templates/searchResults.html
+++ b/templates/searchResults.html
@@ -13,7 +13,7 @@
 var socket = io.connect('http://{{ip}}:8080');
 
   $(".trackEntry").mouseenter(function() {
-  $(this).css("background-color", "yellow");
+  $(this).css("background-color", "var(--gray-light)");
 });
   $(".trackEntry").mouseleave(function() {
   $(this).css("background-color", "white");
