--- a/templates/hostIndex.html
+++ b/templates/hostIndex.html
@@ -2,13 +2,14 @@
 
 {% block content %}
 	<div id="host">
-		<h1>Fuck you {{ user.username }}.</h1>
-		<a href="http://localhost:6969/join/{{ip}}" target="_blank">http://localhost:6969/join/{{ip}}</a>
-                <div class="playlist"></div>
-		<div class="searchbox">
-			<input type="text" ng-model="query" ng-change="loadsearch()" ng-keyup="loadsearch()" placeholder="Search..." />
+		<div class="info-banner">
+			<h1>Hosting a queue</h1>
 		</div>
-		<iframe id='player' src="https://embed.spotify.com/?uri=spotify:track:7GhIk7Il098yCjg4BQjzvb&theme=white&view=coverart" width="300" height="380" frameborder="0" allowtransparency="true" autoplay></iframe>
+		<iframe id='player' src="https://embed.spotify.com/?uri=spotify:track:7GhIk7Il098yCjg4BQjzvb&theme=white&view=coverart" width="640" height="80" frameborder="0" allowtransparency="true"></iframe>
+		<div class="playlist"></div>
+		<div class="bottom-banner">
+			<p>Send this link with your friends: <a href="http://{{ip}}:6969/join/{{ip}}" target="_blank">http://{{ip}}:6969/join/{{ip}}</a></p>
+		</div>
 	</div>
 	<script>
 		var socket = io.connect('http://{{ip}}:8080');
