--- a/templates/searchResults.html
+++ b/templates/searchResults.html
@@ -1,14 +1,14 @@
 {% extends 'layout.html' %}
 
 {% block content %}
-
+<div class="searchResultsContainer">
 {% for track in tracks %}
 	<div class="trackEntry" uri={{ track.uri }}>
 	<img src={{ track.album.images[2].url }} style="width:64px;height:64px;" align="middle">
 	{{ track.name }} -- {{ track.artists[0].name }}
 	</div>
 {% endfor %}
-
+</div>
 <script>
 var socket = io.connect('http://{{ip}}:8080');
 
