--- a/styles/main.css
+++ b/styles/main.css
@@ -1,11 +1,18 @@
 @import 'variables.css';
 @import 'host.css';
 
+html {
+	height: 100%;
+}
 body {
 	margin: 0;
 	padding: 0;
 	font-family: 'Century Gothic', CenturyGothic, AppleGothic, sans-serif;
-	z-index: 0
+	z-index: 0;
+	overflow: hidden;
+	background-image: url('nyancat.gif');
+	background-repeat: repeat;
+	height: 100%;
 }
 
 a {
@@ -65,7 +72,13 @@ a {
 
 .main-content {
 	margin-top: 100px;
+	margin-left: auto;
+	margin-right: auto;
 	text-align: center;
+	width: 1000px;
+	height: 100%;
+	background-color: white;
+	z-index: 1;
 }
 
 .info-banner {
