--- a/styles/main.css
+++ b/styles/main.css
@@ -1,5 +1,6 @@
 @import 'variables.css';
 @import 'host.css';
+@import 'results.css';
 
 html {
 	height: 100%;
@@ -21,7 +22,7 @@ a {
 
 .navbar {
 	background-color: var(--brand-purple);
-	height: 100px;
+	height: 75px;
 	width: 100%;
 	position: fixed;
 	top: 0;
@@ -36,7 +37,7 @@ a {
 	color: white;
 	width: 100%;
 	height: 100%;
-	font-size: 80px;
+	font-size: 55px;
 	text-align: center;
 	vertical-align: middle;
 }
@@ -45,6 +46,7 @@ a {
 	width: 28%;
 	margin-left: 36%;
 	display: inline-block;
+	height: 75px;
 }
 
 .brand-container:hover #fun {
@@ -66,17 +68,19 @@ a {
 	display: inline-block;
 	float: right;
 	margin-right: 20px;
-	margin-top: 37px;
+	margin-top: 25px;
 	z-index: 1;
 }
 
 .main-content {
-	margin-top: 100px;
+	padding-top: 74px;
+	padding-bottom: -74px;
 	margin-left: auto;
 	margin-right: auto;
 	text-align: center;
 	width: 1000px;
 	height: 100%;
+	overflow: scroll;
 	background-color: white;
 	z-index: 1;
 }
@@ -86,7 +90,7 @@ a {
 	margin: 0 auto;
 	width: var(--player-width);
 	position: relative;
-	top: -5px;
+	top: -30px;
 	height: 55px;
 	border-radius: 5px;
 	z-index: 50;
@@ -99,7 +103,7 @@ a {
 }
 
 .login {
-	top: -100px;
+	top: -75px;
 	background-color: var(--gray-darkest);
 }
 .login p {
@@ -114,6 +118,10 @@ a {
 }
 
 .searchResultsContainer{
-	margin: 0 auto;
+	margin-top: 64px;
+	margin-bottom: 139px;
+	margin-left: auto;
+	margin-right: auto;
 	width: 600px;
+	border: solid var(--gray-light) 0.5px;
 }
