--- a/templates/hostIndex.html
+++ b/templates/hostIndex.html
@@ -6,7 +6,7 @@
 			<h1>Hosting a queue</h1>
 		</div>
 		<iframe id='player' src="https://embed.spotify.com/?uri=spotify:track:7GhIk7Il098yCjg4BQjzvb&theme=white&view=coverart" width="640" height="80" frameborder="0" allowtransparency="true"></iframe>
-		<div class="playlist"></div>
+		<div class="hostPlaylist"></div>
 		<div class="bottom-banner">
 			<p>Send this link to your friends: <a href="http://{{ip}}:6969/join/{{ip}}" target="_blank">http://{{ip}}:6969/join/{{ip}}</a></p>
 		</div>
@@ -15,10 +15,25 @@
 		var socket = io.connect('http://{{ip}}:8080');
     socket.on('newTrack', function(data) {
 	  var url = 'https://embed.spotify.com/?uri=spotify:track:7GhIk7Il098yCjg4BQjzvb&theme=white&view=coverart';
-	  $(".playlist").empty();
+	  $(".hostPlaylist").empty();
 	  for(var i = 0; i < data.length; i++) {
-		$(".playlist").append("<p>" + data[i].name + "</p>");
+                 var songEntry = " \
+                  <div class='trackEntry' uri=" + data[i].uri + "> \
+		<div class='left'> \
+			<img src=" + data[i].album.images[2].url + "> \
+		</div> \
+		<div class='right'> \
+			<section class='top'> \
+				<p>" + data[i].name + "</p> \
+			</section> \
+			<section class='bottom'> \
+				<p>" + data[i].artists[0].name + "</p> \
+			</section> \
+		</div> \
+	</div>"
+		$(".hostPlaylist").append(songEntry);
 	  }
+
 	  if(data.length > 0) {
 		url = 'https://embed.spotify.com/?uri=spotify:trackset:1Q:';
 		url += String(data[0].uri).replace(/spotify:track:(.*)/, '$1');
@@ -29,14 +44,6 @@
 	  }
       $('#player').attr("src", url);
     });
-$("#buttonD").click(function() {
-url = 'https://embed.spotify.com/?uri=spotify:trackset:1Q:';
-		url += String(data[0].uri).replace(/spotify:track:(.*)/, '$1');
-		for (var i = 2; i < data.length; i++) {
-		  url += ',' + String(data[i].uri).replace(/spotify:track:(.*)/, '$1');
-		}
-		url += '&theme=white&view=coverart';
-		      $('#player').attr("src", url);
-});
+
 	</script>
 {% endblock %}
