--- a/templates/layout.html
+++ b/templates/layout.html
@@ -11,7 +11,7 @@
 		<div class="navbar">
 			<div class="brand-container">
 				<div class="navbar-brand" id="brand">1Q</div>
-				<div class="navbar-brand" id="fun">Fuck you</div>
+				<div class="navbar-brand" id="fun">OneQueue</div>
 			</div>
 
 		{% if user %}
