--- a/styles/main.css
+++ b/styles/main.css
@@ -125,3 +125,51 @@ a {
 	width: 600px;
 	border: solid var(--gray-light) 0.5px;
 }
+
+input[type="text"].line {
+	width: 200px;
+	border: 0;
+    border-bottom: 1px solid var(--gray-lightest);
+    color: @gray-normal;
+    font-weight: 300;
+    padding: 5px;
+    transition: all 0.25s;
+    text-align: center;
+}
+input[type="text"].line:hover {
+	outline: 0;
+    border-bottom: 1px solid var(--brand-purple);
+}
+input[type="text"]:focus {
+	outline: 0;
+    border-bottom: 1px solid var(--brand-purple);
+}
+input[type="text"]::-webkit-input-placeholder {
+    color: var(--gray-lighter);
+    font-weight: 400;
+}
+#search-btn {
+	background-color: transparent;
+  	box-shadow: none;
+  	text-shadow: none;
+  	cursor: default;
+  	font-size: 10px;
+  	padding: 0.5rem 1rem;
+  	text-transform: uppercase;
+  	transition: all 100ms;
+  	background: transparent;
+	border: 1px solid var(--brand-purple);
+	border-radius: 5px;
+	-webkit-border-radius: 5px;
+	color: var(--brand-purple);
+  	font-weight: 500;
+
+}
+#search-btn:hover {
+    background-color: fade(var(--brand-purple), 2%);
+    border-color: darken(var(--brand-purple), 5%);
+    color: darken(var(--brand-purple), 5%);
+    cursor: default;
+    box-shadow: none;
+  }
+
