--- a/templates/amigoIndex.html
+++ b/templates/amigoIndex.html
@@ -5,16 +5,16 @@
 		<div class="info-banner">
 			<h1>Joined queue</h1>
 		</div>
-		<h1>I'm the amigo, bitch</h1>
-		<h3>and my daddy is {{ip}}</h3>
+		<h3>Search for some tunes!</h3>
 		<form method="post" action="/searchTrack" value="hello">
-			<input id="track-search-input" type="text" name="amigo[search]"/>
-			<input type="submit" value="piss into the wind"/>
+			<input id="track-search-input" type="text" class="line" name="amigo[search]"" placeholder="SexyBack, probably"/>
+			<input id="search-btn" type="submit" value="Search"/>
 		</form>
 		<div class="amigoPlaylist"></div>
 	</div>
 	
 	<script>
+		$('#track-search-input').attr("autocomplete", "off");
 		var socket = io.connect('http://{{ip}}:8080');
 		socket.emit('getPlaylist', {});
 		console.log('tried to send');
