Fixed the border of the empty list thing
Lol, didn't push this

--- a/styles/main.css
+++ b/styles/main.css
@@ -123,7 +123,7 @@ a {
 	margin-left: auto;
 	margin-right: auto;
 	width: 600px;
-	border: solid var(--gray-light) 0.5px;
+	border: none;
 }
 
 input[type="text"].line {
