--- a/templates/amigoIndex.html
+++ b/templates/amigoIndex.html
@@ -37,6 +37,7 @@
 		</div> \
 	</div>"
 			$(".amigoPlaylist").append(songEntry);
+			$(".amigoPlaylist").css('border', 'solid var(--gray-light) 0.5px');
 		  }
 		});
 	</script>
