--- a/templates/hostIndex.html
+++ b/templates/hostIndex.html
@@ -35,6 +35,7 @@
 	  }
 
 	  if(data.length > 0) {
+	    $(".hostPlaylist").css('border', 'solid var(--gray-light) 0.5px');
 		url = 'https://embed.spotify.com/?uri=spotify:trackset:1Q:';
 		url += String(data[0].uri).replace(/spotify:track:(.*)/, '$1');
 		for (var i = 1; i < data.length; i++) {
