--- a/templates/searchResults.html
+++ b/templates/searchResults.html
@@ -19,6 +19,7 @@
 {% endfor %}
 </div>
 <script>
+$(".searchResultsContainer").css('border', 'solid var(--gray-light) 0.5px');
 var socket = io.connect('http://{{ip}}:8080');
 
 $(".trackEntry").click(function() {
