--- a/templates/searchResults.html
+++ b/templates/searchResults.html
@@ -1,6 +1,7 @@
 {% extends 'layout.html' %}
 
 {% block content %}
+{% if tracks.length %}
 <div class="searchResultsContainer">
 {% for track in tracks %}
   <div class="trackEntry" uri={{ track.uri }}>
@@ -17,6 +18,10 @@
     </section>
   </div>
 {% endfor %}
+{% endif %}
+{% if !tracks.length %}
+  <p>No results for that search. You probably should've searched SexyBack</p>
+{% endif %}
 </div>
 <script>
 $(".searchResultsContainer").css('border', 'solid var(--gray-light) 0.5px');
