--- a/templates/hostIndex.html
+++ b/templates/hostIndex.html
@@ -8,41 +8,49 @@
     <iframe id='player' src="https://embed.spotify.com/?uri=spotify:track:7GhIk7Il098yCjg4BQjzvb&theme=white&view=coverart" width="640" height="80" frameborder="0" allowtransparency="true"></iframe>
     <div class="hostPlaylist"></div>
     <div class="bottom-banner">
-      <p>Send this link to your friends: <a href="http://{{ip}}:6969/join/{{ip}}" target="_blank">http://{{ip}}:6969/join/{{ip}}</a></p>
+      <p>Send this link to your friends: <a href="http://localhost:6969/join/{{ip}}" target="_blank">http://localhost:6969/join/{{room_id}}</a></p>
     </div>
   </div>
   <script>
-    var socket = io.connect('http://{{ip}}:8080');
-    socket.on('newTrack', function(data) {
-    var url = 'https://embed.spotify.com/?uri=spotify:track:7GhIk7Il098yCjg4BQjzvb&theme=white&view=coverart';
-    $(".hostPlaylist").empty();
-    for(var i = 0; i < data.length; i++) {
-                 var songEntry = " \
-                  <div class='trackEntry' uri=" + data[i].uri + "> \
-    <div class='left'> \
-      <img src=" + data[i].album.images[2].url + "> \
-    </div> \
-    <div class='right'> \
-      <section class='top'> \
-        <p>" + data[i].name + "</p> \
-      </section> \
-      <section class='bottom'> \
-        <p>" + data[i].artists[0].name + "</p> \
-      </section> \
-    </div> \
-  </div>"
-    $(".hostPlaylist").append(songEntry);
-    }
+    var socket = io.connect('/');
 
-    if(data.length > 0) {
-      $(".hostPlaylist").css('border', 'solid var(--gray-light) 0.5px');
-    url = 'https://embed.spotify.com/?uri=spotify:trackset:1Q:';
-    url += String(data[0].uri).replace(/spotify:track:(.*)/, '$1');
-    for (var i = 1; i < data.length; i++) {
-      url += ',' + String(data[i].uri).replace(/spotify:track:(.*)/, '$1');
-    }
-    url += '&theme=white&view=coverart';
-    }
+    socket.on('connect', function(){
+      console.log("I CONNECTED");
+      // call the server-side function 'adduser' and send one parameter (value of prompt)
+      //socket.emit('startq', {{ room_id }});
+    });
+
+    socket.on('newTrack', function(data) {
+      var url = 'https://embed.spotify.com/?uri=spotify:track:7GhIk7Il098yCjg4BQjzvb&theme=white&view=coverart';
+      $(".hostPlaylist").empty();
+      for(var i = 0; i < data.length; i++) {
+        var songEntry = " \
+          <div class='trackEntry' uri=" + data[i].uri + "> \
+            <div class='left'> \
+              <img src=" + data[i].album.images[2].url + "> \
+            </div> \
+            <div class='right'> \
+              <section class='top'> \
+                <p>" + data[i].name + "</p> \
+              </section> \
+              <section class='bottom'> \
+                <p>" + data[i].artists[0].name + "</p> \
+              </section> \
+            </div> \
+          </div>"
+
+        $(".hostPlaylist").append(songEntry);
+      }
+      
+      if (data.length > 0) {
+        $(".hostPlaylist").css('border', 'solid var(--gray-light) 0.5px');
+        url = 'https://embed.spotify.com/?uri=spotify:trackset:1Q:';
+        url += String(data[0].uri).replace(/spotify:track:(.*)/, '$1');
+        for (var i = 1; i < data.length; i++) {
+          url += ',' + String(data[i].uri).replace(/spotify:track:(.*)/, '$1');
+        }
+        url += '&theme=white&view=coverart';
+      }
       $('#player').attr("src", url);
     });
   </script>
