--- a/templates/searchResults.html
+++ b/templates/searchResults.html
@@ -20,14 +20,14 @@
 {% endfor %}
 {% endif %}
 {% if !tracks.length %}
-  <p>No results for that search. You probably should've searched SexyBack</p>
+  <p>No results for that search. You probably should''ve searched SexyBack</p>
 {% endif %}
 </div>
 <script>
 $(".searchResultsContainer").css('border', 'solid var(--gray-light) 0.5px');
 var socket = io.connect('/');
 
-var r_id = {{r_id}};
+var r_id = '{{r_id}}';
 
 //socket.room = r_id;
 //socket.join(r_id);
