--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>1q</title>
+    <title>1Q</title>
     <link rel="stylesheet" type="text/css" href="/main.css"/>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script type="text/javascript" src='https://cdn.socket.io/socket.io-1.4.5.js'></script>
