--- a/templates/hostIndex.html
+++ b/templates/hostIndex.html
@@ -8,7 +8,7 @@
     <iframe id='player' src="https://embed.spotify.com/?uri=spotify:track:7GhIk7Il098yCjg4BQjzvb&theme=white&view=coverart" width="640" height="80" frameborder="0" allowtransparency="true"></iframe>
     <div class="hostPlaylist"></div>
     <div class="bottom-banner">
-      <p>Send this link to your friends: <a href="https://onequeue.herokuapp.com/amigo/{{room_id}}" target="_blank">onequeue.herokuapp.com/amigo/{{room_id}}</a></p>
+      <p>Send this link to your friends: <a href="https://www.oneq.us/amigo/{{room_id}}" target="_blank">www.oneq.us/amigo/{{room_id}}</a></p>
     </div>
   </div>
   <script>
