no autocomplete on name

--- a/templates/qname.html
+++ b/templates/qname.html
@@ -19,6 +19,7 @@
     </div>
 
     <script>
+      $('#qname-input').attr("autocomplete", "off");
       $(document).ready(function () {
         $("#brand").fadeIn(1500, function() {
           $("#cheesy").fadeIn(1200, function() {
