--- a/templates/qname.html
+++ b/templates/qname.html
@@ -8,7 +8,7 @@
   <body id="nameq-body">
     <div id="nameq">
       <div class="container">
-        <h1 id="brand">1Q</h1>
+        <h1 id="welcome-brand">1Q</h1>
         <p id="cheesy">Everyone's music. One queue.</p>
         <form id="in" method="post" value="hello">
           <input id="qname-input" type="text" class="line" name="qname" placeholder="Queue name"/>
