--- a/templates/qname.html
+++ b/templates/qname.html
@@ -21,7 +21,7 @@
     <script>
       $('#qname-input').attr("autocomplete", "off");
       $(document).ready(function () {
-        $("#brand").fadeIn(1500, function() {
+        $("#welcome-brand").fadeIn(1500, function() {
           $("#cheesy").fadeIn(1200, function() {
             $("#in").fadeIn(1200);
           });
