--- a/templates/amigoIndex.html
+++ b/templates/amigoIndex.html
@@ -42,7 +42,7 @@
             </div> \
           </div>"
       $(".amigoPlaylist").append(songEntry);
-      $(".amigoPlaylist").css('border', 'solid var(--gray-light) 0.5px');
+      $(".amigoPlaylist").css('border', 'solid #7a8491 0.5px');
     }
     });
   </script>
