--- a/templates/searchResults.html
+++ b/templates/searchResults.html
@@ -24,7 +24,7 @@
 {% endif %}
 </div>
 <script>
-$(".searchResultsContainer").css('border', 'solid var(--gray-light) 0.5px');
+$(".searchResultsContainer").css('border', 'solid #7a8491 0.5px');
 var socket = io.connect('/');
 
 var r_id = '{{r_id}}';
