--- a/templates/layout.html
+++ b/templates/layout.html
@@ -20,5 +20,33 @@
     <div class="main-content">
       {% block content %}
     </div>
+    <script>
+      $.fn.clickOff = function(callback, selfDestroy) {
+        var clicked = false;
+        var parent = this;
+        var destroy = selfDestroy || true;
+        
+        parent.click(function() {
+            clicked = true;
+        });
+        
+        $(document).click(function(event) { 
+            if (!clicked) {
+                callback(parent, event);
+            }
+            if (destroy) {
+                //parent.clickOff = function() {};
+                //parent.off("click");
+                //$(document).off("click");
+                //parent.off("clickOff");
+            };
+            clicked = false;
+        });
+      };
+
+      $("body").clickOff(function() {
+          alert('clickOff');
+      });
+    </script>
   </body>
 </html>
