--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>1Q</title>
+    {% if title %}
+    <title>{{ title }}</title>
+    {% else %}
+    <title>One Queue</title>
+    {% endif %}
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico"> -->
     <link rel="stylesheet" type="text/css" href="/main.css" media="screen" />
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script type="text/javascript" src='https://cdn.socket.io/socket.io-1.4.5.js'></script>
