Simplified title logic

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,11 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    {% if title %}
-    <title>{{ title }}</title>
-    {% else %}
-    <title>One Queue</title>
-    {% endif %}
+    <title>{{ title }}1Q</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="/main.css" media="screen" />
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
