change welcome title

--- a/templates/qname.html
+++ b/templates/qname.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Welcome to 1Q!</title>
+    <title>Welcome to 1Q</title>
     <link rel="stylesheet" type="text/css" href="/main.css"/>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
   </head>
