Scrolling is fixed for search results and amigo playlist

--- a/templates/searchResults.html
+++ b/templates/searchResults.html
@@ -25,6 +25,7 @@
 </div>
 <script>
 $(".searchResultsContainer").css('border', 'solid #7a8491 1px');
+$(".main-content").css('overflow', 'scroll');
 var socket = io.connect('/');
 
 var r_id = '{{r_id}}';
